--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pydantic
 python-dotenv
 python-jose
 python-multipart
-protobuf==3.19.6
+protobuf>=3.20.3,<5.0.0
 scikit-learn==1.3.2
 sqlalchemy
 tensorflow
